--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  english_words: ^4.0.0
+  audioplayers: ^6.1.2
 
 dev_dependencies:
   flutter_test:
@@ -25,8 +27,10 @@ flutter:
 
 
   uses-material-design: true
+
   assets:
     - images/
+    - assets/
 
   fonts:
     - family: Pacifico
